--- a/distrib/source/trunk/ac_config.h.tmp.in
+++ b/distrib/source/trunk/ac_config.h.tmp.in
@@ -132,8 +132,7 @@
 /* 1 */
 #undef IDL_SRV_H_SUFFIX
 
-/* Define to the sub-directory in which libtool stores uninstalled libraries.
-   */
+/* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
 
 /* Define to 1 if `major', `minor', and `makedev' are declared in <mkdev.h>.
