--- a/distrib/source/trunk/utils/Makefile.in
+++ b/distrib/source/trunk/utils/Makefile.in
@@ -217,6 +217,9 @@ CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DATADIR = @DATADIR@
+DB_CFLAGS = @DB_CFLAGS@
+DB_LDFLAGS = @DB_LDFLAGS@
+DB_LDLIBS = @DB_LDLIBS@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
