--- a/lib/java/Makefile.in
+++ b/lib/java/Makefile.in
@@ -194,6 +194,9 @@ CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DATADIR = @DATADIR@
+DB_CFLAGS = @DB_CFLAGS@
+DB_LDFLAGS = @DB_LDFLAGS@
+DB_LDLIBS = @DB_LDLIBS@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
@@ -364,17 +367,17 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 javadir = $(datadir)/java
 dist_java_DATA = \
-   Astor-6.7.0.jar \
+   Astor-7.0.0.jar \
    DeviceTree-1.9.6.jar \
-   ATKCore-9.1.13.jar \
-   Jive-6.9.jar \
-   org.tango.pogo-9.2.4.jar \
-   atkpanel-5.4.jar \
+   ATKCore-9.1.22.jar \
+   Jive-6.13.jar \
+   org.tango.pogo-9.4.1.jar \
+   atkpanel-5.5.jar \
    log4j-1.2.15.jar \
    AtkTuning-2.8.jar \
-   LogViewer-2.0.1.jar \
+   LogViewer-2.0.2.jar \
    JTango-9.0.7.jar \
-   ATKWidget-9.1.13.jar \
+   ATKWidget-9.1.22.jar \
    tool_panels-3.2.jar
 
 @TANGO_JAVA_ENABLED_TRUE@bin_SCRIPTS = \
