--- a/lib/java/astor.in
+++ b/lib/java/astor.in
@@ -51,7 +51,7 @@ JIVE_CLASS=$LIB_DIR/Jive.jar;       export JIVE_CLASS
 LOGVIEWER=$LIB_DIR/LogViewer.jar;   export LOGVIEWER
 LOG4J=$LIB_DIR/log4j.jar;			export LOG4J
 
-JSSHTERM=JSSHTerminal.jar
+JSSHTERM=$LIB_DIR/JSSHTerminal.jar
 
 ATK_CLASS=$LIB_DIR/ATKCore.jar:$LIB_DIR/ATKWidget.jar
 ATK_CLASS=$ATK_CLASS:$APP_DIR/atkpanel.jar:$APP_DIR/tool_panels.jar
