--- a/distrib/source/trunk/configure.ac
+++ b/distrib/source/trunk/configure.ac
@@ -20,7 +20,7 @@
 # packagename, the second is the version used for the tar file,
 # the third is an email address for bug reports (shouldn't be necessary),
 # and the fourth argument is                
-AC_INIT(Tango,9.2.5,tango@esrf.fr,tango)
+AC_INIT(Tango,9.2.5a,info@tango-controls.org,tango)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_MACRO_DIR([m4])
 
