--- a/distrib/source/trunk/lib/java/astor.in
+++ b/distrib/source/trunk/lib/java/astor.in
@@ -52,12 +52,13 @@ LOGVIEWER=$LIB_DIR/LogViewer.jar;   export LOGVIEWER
 LOG4J=$LIB_DIR/log4j.jar;			export LOG4J
 
 JSSHTERM=$LIB_DIR/JSSHTerminal.jar
+DBBENCH=$LIB_DIR/DBBench.jar
 
 ATK_CLASS=$LIB_DIR/ATKCore.jar:$LIB_DIR/ATKWidget.jar
 ATK_CLASS=$ATK_CLASS:$APP_DIR/atkpanel.jar:$APP_DIR/tool_panels.jar
 export ATK_CLASS
 
-CLASSPATH=$TANGO_CLASS:$ASTOR_CLASS:$JIVE_CLASS:$ATK_CLASS:$LOGVIEWER:$JSSHTERM:$LOG4J
+CLASSPATH=$TANGO_CLASS:$ASTOR_CLASS:$JIVE_CLASS:$ATK_CLASS:$LOGVIEWER:$JSSHTERM:$DBBENCH:$LOG4J
 export CLASSPATH
 
 #---------------------------------------------------------
