pogo/preferences: Highlight files with custom make extension
Problem: Github does not highlight our .opt file using Makefile syntax
highlightning

Solution: Add a vim modeline as github understand that [1].

[1]: https://github.com/github/linguist#using-emacs-or-vim-modelines

--- a/pogo/preferences/tango.opt.in
+++ b/pogo/preferences/tango.opt.in
@@ -1,3 +1,5 @@
+# vim: set filetype=make:
+
 #------------------------------------------------------------------------------
 #-- gcc version
 #------------------------------------------------------------------------------
