--- a/scripts/tango.in
+++ b/scripts/tango.in
@@ -121,7 +121,7 @@ case "$1" in
 		fi
 	fi
 	# Start the database device server if needed
-	findproc DataBase
+	findproc DataBaseds
 	if [ "$pid" != "" ];
 	then
 		${ECHO} "Database Server already running, exiting"
@@ -136,7 +136,7 @@ case "$1" in
 
 		# wait for a while before checking status
 		sleep 3
-		findproc DataBase
+		findproc DataBaseds
 		if [ "$pid" = "" ];
 		then
 			${ECHO} "Failed to start Tango database server"
@@ -169,7 +169,7 @@ case "$1" in
 		${ECHO} "MySQL : No process"
 	fi
 
-	findproc DataBase
+	findproc DataBaseds
 	if [ "$pid" != "" ];
 	then
 		${ECHO} "TANGO Database server OK"
