--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/idl"]
 	path = lib/idl
 	url = https://github.com/tango-controls/tango-idl.git
+[submodule "utils/tango_admin"]
+	path = utils/tango_admin
+	url = https://github.com/tango-controls/tango_admin.git
