--- a/distribution.properties
+++ b/distribution.properties
@@ -19,7 +19,7 @@ pogo-ver=9.6.12
 #cppserver
 TangoTest=TangoTest-Release-2.1
 TangoDatabase=DataBase-Release-5.6
-TangoAccessControl=TangoAccessControl-Release-2.12
+TangoAccessControl=master
 starter=Starter-7.0
 #doc
 docs-ver=latest
