--- a/assets/lib/java/pogo-6.in
+++ b/assets/lib/java/pogo-6.in
@@ -55,7 +55,7 @@ export SRC_PATH
 APP_DIR=@prefix@/share/java;		export APP_DIR
 
 TANGO_CLASS=$APP_DIR/JTango.jar;	export TANGO_CLASS
-POGO_CLASS=$APP_DIR/org.tango.pogo.jar;		export POGO_CLASS
+POGO_CLASS=$APP_DIR/Pogo.jar;		export POGO_CLASS
 
 CLASSPATH=$POGO_CLASS:$TANGO_CLASS;    export CLASSPATH
 
