--- a/assets/lib/cpp/client/helpers/Makefile.in
+++ b/assets/lib/cpp/client/helpers/Makefile.in
@@ -15,11 +15,6 @@
 
 @SET_MAKE@
 
-# In the java directory we don't want to do anything, just
-# make sure it is in the dist. Don't use EXTRA_DIST. It will copy
-# the link instead of keeping them as links
-
-
 VPATH = @srcdir@
 am__make_dryrun = \
   { \
@@ -56,9 +51,9 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-subdir = lib/java
-DIST_COMMON = README $(dist_java_DATA) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in
+subdir = lib/cpp/client/helpers
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+	$(tangoinclude_HEADERS)
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/RSSH_CHECK_OMNIORB.m4 \
 	$(top_srcdir)/m4/RSSH_CHECK_PTHREADS.m4 \
@@ -83,6 +78,19 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/ac_config.h.tmp
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
+AM_V_GEN = $(am__v_GEN_@AM_V@)
+am__v_GEN_ = $(am__v_GEN_@AM_DEFAULT_V@)
+am__v_GEN_0 = @echo "  GEN   " $@;
+AM_V_at = $(am__v_at_@AM_V@)
+am__v_at_ = $(am__v_at_@AM_DEFAULT_V@)
+am__v_at_0 = @
+SOURCES =
+DIST_SOURCES =
+am__can_run_installinfo = \
+  case $$AM_UPDATE_INFO_DIR in \
+    n|no|NO) false;; \
+    *) (install-info --version) >/dev/null 2>&1;; \
+  esac
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
     $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
@@ -110,22 +118,10 @@ am__uninstall_files_from_dir = { \
     || { echo " ( cd '$$dir' && rm -f" $$files ")"; \
          $(am__cd) "$$dir" && rm -f $$files; }; \
   }
-am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(javadir)"
-SCRIPTS = $(bin_SCRIPTS)
-AM_V_GEN = $(am__v_GEN_@AM_V@)
-am__v_GEN_ = $(am__v_GEN_@AM_DEFAULT_V@)
-am__v_GEN_0 = @echo "  GEN   " $@;
-AM_V_at = $(am__v_at_@AM_V@)
-am__v_at_ = $(am__v_at_@AM_DEFAULT_V@)
-am__v_at_0 = @
-SOURCES =
-DIST_SOURCES =
-am__can_run_installinfo = \
-  case $$AM_UPDATE_INFO_DIR in \
-    n|no|NO) false;; \
-    *) (install-info --version) >/dev/null 2>&1;; \
-  esac
-DATA = $(dist_java_DATA)
+am__installdirs = "$(DESTDIR)$(tangoincludedir)"
+HEADERS = $(tangoinclude_HEADERS)
+ETAGS = etags
+CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 ALLOCA = @ALLOCA@
@@ -318,61 +314,11 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-javadir = $(datadir)/java
-dist_java_DATA = \
-   @ASTOR_JAR@ \
-   @ATK_CORE_JAR@ \
-   @JIVE_JAR@ \
-   @POGO_JAR@ \
-   @ATK_PANEL_JAR@ \
-#   log4j-1.2.15.jar \
-   @ATK_TUNING_JAR@ \
-   @LOGVIEWER_JAR@ \
-   @JTANGO_JAR@ \
-   @ATK_WIDGET_JAR@ \
-   @DBBENCH_JAR@ \
-   @JSSH_TERMINAL_JAR@
-
-@TANGO_JAVA_ENABLED_TRUE@bin_SCRIPTS = \
-@TANGO_JAVA_ENABLED_TRUE@   astor \
-@TANGO_JAVA_ENABLED_TRUE@   jive \
-@TANGO_JAVA_ENABLED_TRUE@   pogo \
-@TANGO_JAVA_ENABLED_TRUE@   pogo-6 \
-@TANGO_JAVA_ENABLED_TRUE@   atkpanel \
-@TANGO_JAVA_ENABLED_TRUE@   logviewer \
-@TANGO_JAVA_ENABLED_TRUE@   atktuning \
-@TANGO_JAVA_ENABLED_TRUE@   jdraw \
-@TANGO_JAVA_ENABLED_TRUE@   synopticappli \
-@TANGO_JAVA_ENABLED_TRUE@   atkmoni \
-@TANGO_JAVA_ENABLED_TRUE@   tg_devtest \
-@TANGO_JAVA_ENABLED_TRUE@   TangoVers \
-@TANGO_JAVA_ENABLED_TRUE@   cvstag
-
-@TANGO_JAVA_ENABLED_TRUE@edit = sed \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@SHELL[@]|$(SHELL)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@TANGO_RC_FILE[@]|$(TANGO_RC_FILE)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@JAVA[@]|$(JAVA)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@DOXYGEN[@]|$(DOXYGEN)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@libdir[@]|$(libdir)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@prefix[@]|$(prefix)|g'
-
-
-# Make sure that all these go into the dist.
-EXTRA_DIST = \
-   astor.in \
-   jive.in \
-   pogo.in \
-   pogo-6.in \
-   devicetree.in \
-   atkpanel.in \
-   logviewer.in \
-   atktuning.in \
-   jdraw.in \
-   synopticappli.in \
-   atkmoni.in \
-   cvstag.in \
-   tg_devtest.in \
-   TangoVers.in
+tangoincludedir = $(includedir)/tango
+tangoinclude_HEADERS = DeviceProxyHelper.h      \
+                       PogoHelper.h             \
+                       TangoExceptionsHelper.h  \
+                       Xstring.h
 
 all: all-am
 
@@ -386,9 +332,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu lib/java/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu lib/cpp/client/helpers/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu lib/java/Makefile
+	  $(AUTOMAKE) --gnu lib/cpp/client/helpers/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -407,74 +353,85 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-install-binSCRIPTS: $(bin_SCRIPTS)
-	@$(NORMAL_INSTALL)
-	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || list=; \
-	if test -n "$$list"; then \
-	  echo " $(MKDIR_P) '$(DESTDIR)$(bindir)'"; \
-	  $(MKDIR_P) "$(DESTDIR)$(bindir)" || exit 1; \
-	fi; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  if test -f "$$d$$p"; then echo "$$d$$p"; echo "$$p"; else :; fi; \
-	done | \
-	sed -e 'p;s,.*/,,;n' \
-	    -e 'h;s|.*|.|' \
-	    -e 'p;x;s,.*/,,;$(transform)' | sed 'N;N;N;s,\n, ,g' | \
-	$(AWK) 'BEGIN { files["."] = ""; dirs["."] = 1; } \
-	  { d=$$3; if (dirs[d] != 1) { print "d", d; dirs[d] = 1 } \
-	    if ($$2 == $$4) { files[d] = files[d] " " $$1; \
-	      if (++n[d] == $(am__install_max)) { \
-		print "f", d, files[d]; n[d] = 0; files[d] = "" } } \
-	    else { print "f", d "/" $$4, $$1 } } \
-	  END { for (d in files) print "f", d, files[d] }' | \
-	while read type dir files; do \
-	     if test "$$dir" = .; then dir=; else dir=/$$dir; fi; \
-	     test -z "$$files" || { \
-	       echo " $(INSTALL_SCRIPT) $$files '$(DESTDIR)$(bindir)$$dir'"; \
-	       $(INSTALL_SCRIPT) $$files "$(DESTDIR)$(bindir)$$dir" || exit $$?; \
-	     } \
-	; done
-
-uninstall-binSCRIPTS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || exit 0; \
-	files=`for p in $$list; do echo "$$p"; done | \
-	       sed -e 's,.*/,,;$(transform)'`; \
-	dir='$(DESTDIR)$(bindir)'; $(am__uninstall_files_from_dir)
 
 mostlyclean-libtool:
 	-rm -f *.lo
 
 clean-libtool:
 	-rm -rf .libs _libs
-install-dist_javaDATA: $(dist_java_DATA)
+install-tangoincludeHEADERS: $(tangoinclude_HEADERS)
 	@$(NORMAL_INSTALL)
-	@list='$(dist_java_DATA)'; test -n "$(javadir)" || list=; \
+	@list='$(tangoinclude_HEADERS)'; test -n "$(tangoincludedir)" || list=; \
 	if test -n "$$list"; then \
-	  echo " $(MKDIR_P) '$(DESTDIR)$(javadir)'"; \
-	  $(MKDIR_P) "$(DESTDIR)$(javadir)" || exit 1; \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(tangoincludedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(tangoincludedir)" || exit 1; \
 	fi; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  echo "$$d$$p"; \
 	done | $(am__base_list) | \
 	while read files; do \
-	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(javadir)'"; \
-	  $(INSTALL_DATA) $$files "$(DESTDIR)$(javadir)" || exit $$?; \
+	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(tangoincludedir)'"; \
+	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(tangoincludedir)" || exit $$?; \
 	done
 
-uninstall-dist_javaDATA:
+uninstall-tangoincludeHEADERS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(dist_java_DATA)'; test -n "$(javadir)" || list=; \
+	@list='$(tangoinclude_HEADERS)'; test -n "$(tangoincludedir)" || list=; \
 	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	dir='$(DESTDIR)$(javadir)'; $(am__uninstall_files_from_dir)
+	dir='$(DESTDIR)$(tangoincludedir)'; $(am__uninstall_files_from_dir)
+
+ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
+	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
+	unique=`for i in $$list; do \
+	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
+	  done | \
+	  $(AWK) '{ files[$$0] = 1; nonempty = 1; } \
+	      END { if (nonempty) { for (i in files) print i; }; }'`; \
+	mkid -fID $$unique
 tags: TAGS
-TAGS:
 
+TAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
+		$(TAGS_FILES) $(LISP)
+	set x; \
+	here=`pwd`; \
+	list='$(SOURCES) $(HEADERS)  $(LISP) $(TAGS_FILES)'; \
+	unique=`for i in $$list; do \
+	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
+	  done | \
+	  $(AWK) '{ files[$$0] = 1; nonempty = 1; } \
+	      END { if (nonempty) { for (i in files) print i; }; }'`; \
+	shift; \
+	if test -z "$(ETAGS_ARGS)$$*$$unique"; then :; else \
+	  test -n "$$unique" || unique=$$empty_fix; \
+	  if test $$# -gt 0; then \
+	    $(ETAGS) $(ETAGSFLAGS) $(AM_ETAGSFLAGS) $(ETAGS_ARGS) \
+	      "$$@" $$unique; \
+	  else \
+	    $(ETAGS) $(ETAGSFLAGS) $(AM_ETAGSFLAGS) $(ETAGS_ARGS) \
+	      $$unique; \
+	  fi; \
+	fi
 ctags: CTAGS
-CTAGS:
+CTAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) \
+		$(TAGS_FILES) $(LISP)
+	list='$(SOURCES) $(HEADERS)  $(LISP) $(TAGS_FILES)'; \
+	unique=`for i in $$list; do \
+	    if test -f "$$i"; then echo $$i; else echo $(srcdir)/$$i; fi; \
+	  done | \
+	  $(AWK) '{ files[$$0] = 1; nonempty = 1; } \
+	      END { if (nonempty) { for (i in files) print i; }; }'`; \
+	test -z "$(CTAGS_ARGS)$$unique" \
+	  || $(CTAGS) $(CTAGSFLAGS) $(AM_CTAGSFLAGS) $(CTAGS_ARGS) \
+	     $$unique
 
+GTAGS:
+	here=`$(am__cd) $(top_builddir) && pwd` \
+	  && $(am__cd) $(top_srcdir) \
+	  && gtags -i $(GTAGS_ARGS) "$$here"
+
+distclean-tags:
+	-rm -f TAGS ID GTAGS GRTAGS GSYMS GPATH tags
 
 distdir: $(DISTFILES)
 	@srcdirstrip=`echo "$(srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g'`; \
@@ -508,9 +465,9 @@ distdir: $(DISTFILES)
 	done
 check-am: all-am
 check: check-am
-all-am: Makefile $(SCRIPTS) $(DATA)
+all-am: Makefile $(HEADERS)
 installdirs:
-	for dir in "$(DESTDIR)$(bindir)" "$(DESTDIR)$(javadir)"; do \
+	for dir in "$(DESTDIR)$(tangoincludedir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -543,14 +500,13 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-@TANGO_JAVA_ENABLED_FALSE@distclean-local:
 clean: clean-am
 
 clean-am: clean-generic clean-libtool mostlyclean-am
 
 distclean: distclean-am
 	-rm -f Makefile
-distclean-am: clean-am distclean-generic distclean-local
+distclean-am: clean-am distclean-generic distclean-tags
 
 dvi: dvi-am
 
@@ -564,14 +520,13 @@ info: info-am
 
 info-am:
 
-install-data-am: install-dist_javaDATA
-	@$(NORMAL_INSTALL)
-	$(MAKE) $(AM_MAKEFLAGS) install-data-hook
+install-data-am: install-tangoincludeHEADERS
+
 install-dvi: install-dvi-am
 
 install-dvi-am:
 
-install-exec-am: install-binSCRIPTS
+install-exec-am:
 
 install-html: install-html-am
 
@@ -609,67 +564,24 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-binSCRIPTS uninstall-dist_javaDATA
+uninstall-am: uninstall-tangoincludeHEADERS
 
-.MAKE: install-am install-data-am install-strip
+.MAKE: install-am install-strip
 
-.PHONY: all all-am check check-am clean clean-generic clean-libtool \
-	distclean distclean-generic distclean-libtool distclean-local \
-	distdir dvi dvi-am html html-am info info-am install \
-	install-am install-binSCRIPTS install-data install-data-am \
-	install-data-hook install-dist_javaDATA install-dvi \
-	install-dvi-am install-exec install-exec-am install-html \
-	install-html-am install-info install-info-am install-man \
-	install-pdf install-pdf-am install-ps install-ps-am \
-	install-strip installcheck installcheck-am installdirs \
-	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	uninstall uninstall-am uninstall-binSCRIPTS \
-	uninstall-dist_javaDATA
+.PHONY: CTAGS GTAGS all all-am check check-am clean clean-generic \
+	clean-libtool ctags distclean distclean-generic \
+	distclean-libtool distclean-tags distdir dvi dvi-am html \
+	html-am info info-am install install-am install-data \
+	install-data-am install-dvi install-dvi-am install-exec \
+	install-exec-am install-html install-html-am install-info \
+	install-info-am install-man install-pdf install-pdf-am \
+	install-ps install-ps-am install-strip \
+	install-tangoincludeHEADERS installcheck installcheck-am \
+	installdirs maintainer-clean maintainer-clean-generic \
+	mostlyclean mostlyclean-generic mostlyclean-libtool pdf pdf-am \
+	ps ps-am tags uninstall uninstall-am \
+	uninstall-tangoincludeHEADERS
 
-
-#astor jive pogo pogo-6 devicetree atkpanel logviewer atktuning jdraw synopticappli atkmoni cvstag TangoVers tg_devtest: Makefile
-@TANGO_JAVA_ENABLED_TRUE@$(bin_SCRIPTS): Makefile
-@TANGO_JAVA_ENABLED_TRUE@	rm -f $@ $@.tmp
-@TANGO_JAVA_ENABLED_TRUE@	srcdir=''; \
-@TANGO_JAVA_ENABLED_TRUE@	test -f ./$@.in || srcdir=$(srcdir)/; \
-@TANGO_JAVA_ENABLED_TRUE@	$(edit) $${srcdir}$@.in >$@.tmp
-
-@TANGO_JAVA_ENABLED_TRUE@	chmod +x $@.tmp
-@TANGO_JAVA_ENABLED_TRUE@	chmod a-w $@.tmp
-@TANGO_JAVA_ENABLED_TRUE@	mv $@.tmp $@
-
-@TANGO_JAVA_ENABLED_TRUE@astor: $(srcdir)/astor.in
-@TANGO_JAVA_ENABLED_TRUE@jive: $(srcdir)/jive.in
-@TANGO_JAVA_ENABLED_TRUE@pogo: $(srcdir)/pogo.in
-@TANGO_JAVA_ENABLED_TRUE@pogo-6: $(srcdir)/pogo-6.in
-@TANGO_JAVA_ENABLED_TRUE@devicetree: $(srcdir)/devicetree.in
-@TANGO_JAVA_ENABLED_TRUE@atkpanel: $(srcdir)/atkpanel.in
-@TANGO_JAVA_ENABLED_TRUE@logviewer: $(srcdir)/logviewer.in
-@TANGO_JAVA_ENABLED_TRUE@atktuning: $(srcdir)/atktuning.in
-@TANGO_JAVA_ENABLED_TRUE@jdraw: $(srcdir)/jdraw.in
-@TANGO_JAVA_ENABLED_TRUE@synopticappli: $(srcdir)/synopticappli.in
-@TANGO_JAVA_ENABLED_TRUE@atkmoni: $(srcdir)/atkmoni.in
-@TANGO_JAVA_ENABLED_TRUE@cvstag: $(srcdir)/cvstag.in
-@TANGO_JAVA_ENABLED_TRUE@TangoVers: $(srcdir)/TangoVers.in
-@TANGO_JAVA_ENABLED_TRUE@tg_devtest: $(srcdir)/tg_devtest.in
-
-@TANGO_JAVA_ENABLED_TRUE@distclean-local: distclean-local-check
-@TANGO_JAVA_ENABLED_TRUE@.PHONY: distclean-local-check
-@TANGO_JAVA_ENABLED_TRUE@distclean-local-check:
-@TANGO_JAVA_ENABLED_TRUE@	-rm -rf $(bin_SCRIPTS)
-
-# Even though we do not want to compile anything in the
-# java-directory, we still want to install the sources in
-# prefix/share/tango
-
-install-data-hook:
-	(cd  $(DESTDIR)$(javadir) ; \
-	for i in $(dist_java_DATA) ; do \
-	link_name=`echo $$i | @SED@ -e's/-[0-9.]*/./'` ; \
-	$(RM) $$link_name && @LN_S@ $$i $$link_name ; \
-	done \
-	)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
