--- a/assets/pogo/templates/Makefile.in
+++ b/assets/pogo/templates/Makefile.in
@@ -15,11 +15,6 @@
 
 @SET_MAKE@
 
-# In the java directory we don't want to do anything, just
-# make sure it is in the dist. Don't use EXTRA_DIST. It will copy
-# the link instead of keeping them as links
-
-
 VPATH = @srcdir@
 am__make_dryrun = \
   { \
@@ -56,8 +51,10 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-subdir = lib/java
-DIST_COMMON = README $(dist_java_DATA) $(srcdir)/Makefile.am \
+subdir = pogo/templates
+DIST_COMMON = $(dist_cpp_template_DATA) $(dist_html_template_DATA) \
+	$(dist_java_template_DATA) $(dist_python_template_DATA) \
+	$(dist_txt_template_DATA) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/RSSH_CHECK_OMNIORB.m4 \
@@ -83,6 +80,19 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/ac_config.h.tmp
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
+AM_V_GEN = $(am__v_GEN_@AM_V@)
+am__v_GEN_ = $(am__v_GEN_@AM_DEFAULT_V@)
+am__v_GEN_0 = @echo "  GEN   " $@;
+AM_V_at = $(am__v_at_@AM_V@)
+am__v_at_ = $(am__v_at_@AM_DEFAULT_V@)
+am__v_at_0 = @
+SOURCES =
+DIST_SOURCES =
+am__can_run_installinfo = \
+  case $$AM_UPDATE_INFO_DIR in \
+    n|no|NO) false;; \
+    *) (install-info --version) >/dev/null 2>&1;; \
+  esac
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
     $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
@@ -110,22 +120,14 @@ am__uninstall_files_from_dir = { \
     || { echo " ( cd '$$dir' && rm -f" $$files ")"; \
          $(am__cd) "$$dir" && rm -f $$files; }; \
   }
-am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(javadir)"
-SCRIPTS = $(bin_SCRIPTS)
-AM_V_GEN = $(am__v_GEN_@AM_V@)
-am__v_GEN_ = $(am__v_GEN_@AM_DEFAULT_V@)
-am__v_GEN_0 = @echo "  GEN   " $@;
-AM_V_at = $(am__v_at_@AM_V@)
-am__v_at_ = $(am__v_at_@AM_DEFAULT_V@)
-am__v_at_0 = @
-SOURCES =
-DIST_SOURCES =
-am__can_run_installinfo = \
-  case $$AM_UPDATE_INFO_DIR in \
-    n|no|NO) false;; \
-    *) (install-info --version) >/dev/null 2>&1;; \
-  esac
-DATA = $(dist_java_DATA)
+am__installdirs = "$(DESTDIR)$(cpp_templatedir)" \
+	"$(DESTDIR)$(html_templatedir)" \
+	"$(DESTDIR)$(java_templatedir)" \
+	"$(DESTDIR)$(python_templatedir)" \
+	"$(DESTDIR)$(txt_templatedir)"
+DATA = $(dist_cpp_template_DATA) $(dist_html_template_DATA) \
+	$(dist_java_template_DATA) $(dist_python_template_DATA) \
+	$(dist_txt_template_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 ALLOCA = @ALLOCA@
@@ -318,61 +320,68 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-javadir = $(datadir)/java
-dist_java_DATA = \
-   @ASTOR_JAR@ \
-   @ATK_CORE_JAR@ \
-   @JIVE_JAR@ \
-   @POGO_JAR@ \
-   @ATK_PANEL_JAR@ \
-#   log4j-1.2.15.jar \
-   @ATK_TUNING_JAR@ \
-   @LOGVIEWER_JAR@ \
-   @JTANGO_JAR@ \
-   @ATK_WIDGET_JAR@ \
-   @DBBENCH_JAR@ \
-   @JSSH_TERMINAL_JAR@
+cpp_templatedir = $(datadir)/pogo/templates/cpp
+html_templatedir = $(datadir)/pogo/templates/html
+java_templatedir = $(datadir)/pogo/templates/java
+python_templatedir = $(datadir)/pogo/templates/python
+txt_templatedir = $(datadir)/pogo/templates/txt
+dist_cpp_template_DATA = cpp/Allowed.cpp \
+		   cpp/ClassFactory.cpp \
+		   cpp/DevServClass.cpp \
+		   cpp/DevServClass.h \
+		   cpp/DevServ.cpp \
+		   cpp/DevServ.dsp \
+		   cpp/DevServ.h \
+		   cpp/MachineState.cpp \
+		   cpp/main.cpp \
+		   cpp/Makefile \
+		   cpp/ReadHardwareAttr.cpp \
+		   cpp/README \
+		   cpp/readPropMethodName.cpp \
+		   cpp/ReadWriteAttr.cpp \
+		   cpp/set_default_property.cpp \
+		   cpp/state.cpp \
+		   cpp/write_property.cpp \
+		   cpp/vc8_project/Class_dll.vcproj \
+		   cpp/vc8_project/Class_lib.vcproj \
+		   cpp/vc8_project/DevServ.sln \
+		   cpp/vc8_project/Server_shared.vcproj \
+		   cpp/vc8_project/Server_static.vcproj
 
-@TANGO_JAVA_ENABLED_TRUE@bin_SCRIPTS = \
-@TANGO_JAVA_ENABLED_TRUE@   astor \
-@TANGO_JAVA_ENABLED_TRUE@   jive \
-@TANGO_JAVA_ENABLED_TRUE@   pogo \
-@TANGO_JAVA_ENABLED_TRUE@   pogo-6 \
-@TANGO_JAVA_ENABLED_TRUE@   atkpanel \
-@TANGO_JAVA_ENABLED_TRUE@   logviewer \
-@TANGO_JAVA_ENABLED_TRUE@   atktuning \
-@TANGO_JAVA_ENABLED_TRUE@   jdraw \
-@TANGO_JAVA_ENABLED_TRUE@   synopticappli \
-@TANGO_JAVA_ENABLED_TRUE@   atkmoni \
-@TANGO_JAVA_ENABLED_TRUE@   tg_devtest \
-@TANGO_JAVA_ENABLED_TRUE@   TangoVers \
-@TANGO_JAVA_ENABLED_TRUE@   cvstag
+EXTRA_DIST = cpp/Makefile.in 
+dist_html_template_DATA = html/Doxyfile \
+		   html/footer.html \
+		   html/frame.html \
+		   html/header.html \
+		   html/HowIsGenerated.html \
+		   html/index.html \
+		   html/Inheritance.html \
+		   html/page.html \
+		   html/SearchItem.html \
+		   html/ServersList.html \
+		   html/TangoProgrammerGuide.html \
+		   html/tkcvs_browser.jpg \
+		   html/TPG_CvsModule.html \
+		   html/TPG_CvsTags.html \
+		   html/TPG_NamingConventions.html
 
-@TANGO_JAVA_ENABLED_TRUE@edit = sed \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@SHELL[@]|$(SHELL)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@TANGO_RC_FILE[@]|$(TANGO_RC_FILE)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@JAVA[@]|$(JAVA)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@DOXYGEN[@]|$(DOXYGEN)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@libdir[@]|$(libdir)|g' \
-@TANGO_JAVA_ENABLED_TRUE@		-e 's|@prefix[@]|$(prefix)|g'
+dist_java_template_DATA = java/DevServClass.java \
+		   java/DevServCmd.java \
+		   java/DevServ.java \
+		   java/Makefile \
+		   java/README \
+		   java/readPropMethodName.java \
+		   java/ReadWriteAttr.java \
+		   java/states.java \
+		   java/TangoclassProxy.java \
+		   java/write_property.java 
 
+dist_python_template_DATA = python/Attribute.py \
+			   python/Command.py \
+			   python/DevServ.py
 
-# Make sure that all these go into the dist.
-EXTRA_DIST = \
-   astor.in \
-   jive.in \
-   pogo.in \
-   pogo-6.in \
-   devicetree.in \
-   atkpanel.in \
-   logviewer.in \
-   atktuning.in \
-   jdraw.in \
-   synopticappli.in \
-   atkmoni.in \
-   cvstag.in \
-   tg_devtest.in \
-   TangoVers.in
+dist_txt_template_DATA = txt/Shortcuts.txt \
+		   txt/WhatIsNew.txt
 
 all: all-am
 
@@ -386,9 +395,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu lib/java/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu pogo/templates/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu lib/java/Makefile
+	  $(AUTOMAKE) --gnu pogo/templates/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -407,68 +416,117 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-install-binSCRIPTS: $(bin_SCRIPTS)
-	@$(NORMAL_INSTALL)
-	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || list=; \
-	if test -n "$$list"; then \
-	  echo " $(MKDIR_P) '$(DESTDIR)$(bindir)'"; \
-	  $(MKDIR_P) "$(DESTDIR)$(bindir)" || exit 1; \
-	fi; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  if test -f "$$d$$p"; then echo "$$d$$p"; echo "$$p"; else :; fi; \
-	done | \
-	sed -e 'p;s,.*/,,;n' \
-	    -e 'h;s|.*|.|' \
-	    -e 'p;x;s,.*/,,;$(transform)' | sed 'N;N;N;s,\n, ,g' | \
-	$(AWK) 'BEGIN { files["."] = ""; dirs["."] = 1; } \
-	  { d=$$3; if (dirs[d] != 1) { print "d", d; dirs[d] = 1 } \
-	    if ($$2 == $$4) { files[d] = files[d] " " $$1; \
-	      if (++n[d] == $(am__install_max)) { \
-		print "f", d, files[d]; n[d] = 0; files[d] = "" } } \
-	    else { print "f", d "/" $$4, $$1 } } \
-	  END { for (d in files) print "f", d, files[d] }' | \
-	while read type dir files; do \
-	     if test "$$dir" = .; then dir=; else dir=/$$dir; fi; \
-	     test -z "$$files" || { \
-	       echo " $(INSTALL_SCRIPT) $$files '$(DESTDIR)$(bindir)$$dir'"; \
-	       $(INSTALL_SCRIPT) $$files "$(DESTDIR)$(bindir)$$dir" || exit $$?; \
-	     } \
-	; done
-
-uninstall-binSCRIPTS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || exit 0; \
-	files=`for p in $$list; do echo "$$p"; done | \
-	       sed -e 's,.*/,,;$(transform)'`; \
-	dir='$(DESTDIR)$(bindir)'; $(am__uninstall_files_from_dir)
 
 mostlyclean-libtool:
 	-rm -f *.lo
 
 clean-libtool:
 	-rm -rf .libs _libs
-install-dist_javaDATA: $(dist_java_DATA)
+install-dist_cpp_templateDATA: $(dist_cpp_template_DATA)
 	@$(NORMAL_INSTALL)
-	@list='$(dist_java_DATA)'; test -n "$(javadir)" || list=; \
+	@list='$(dist_cpp_template_DATA)'; test -n "$(cpp_templatedir)" || list=; \
 	if test -n "$$list"; then \
-	  echo " $(MKDIR_P) '$(DESTDIR)$(javadir)'"; \
-	  $(MKDIR_P) "$(DESTDIR)$(javadir)" || exit 1; \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(cpp_templatedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(cpp_templatedir)" || exit 1; \
 	fi; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  echo "$$d$$p"; \
 	done | $(am__base_list) | \
 	while read files; do \
-	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(javadir)'"; \
-	  $(INSTALL_DATA) $$files "$(DESTDIR)$(javadir)" || exit $$?; \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(cpp_templatedir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(cpp_templatedir)" || exit $$?; \
 	done
 
-uninstall-dist_javaDATA:
+uninstall-dist_cpp_templateDATA:
 	@$(NORMAL_UNINSTALL)
-	@list='$(dist_java_DATA)'; test -n "$(javadir)" || list=; \
+	@list='$(dist_cpp_template_DATA)'; test -n "$(cpp_templatedir)" || list=; \
 	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	dir='$(DESTDIR)$(javadir)'; $(am__uninstall_files_from_dir)
+	dir='$(DESTDIR)$(cpp_templatedir)'; $(am__uninstall_files_from_dir)
+install-dist_html_templateDATA: $(dist_html_template_DATA)
+	@$(NORMAL_INSTALL)
+	@list='$(dist_html_template_DATA)'; test -n "$(html_templatedir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(html_templatedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(html_templatedir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(html_templatedir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(html_templatedir)" || exit $$?; \
+	done
+
+uninstall-dist_html_templateDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(dist_html_template_DATA)'; test -n "$(html_templatedir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(html_templatedir)'; $(am__uninstall_files_from_dir)
+install-dist_java_templateDATA: $(dist_java_template_DATA)
+	@$(NORMAL_INSTALL)
+	@list='$(dist_java_template_DATA)'; test -n "$(java_templatedir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(java_templatedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(java_templatedir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(java_templatedir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(java_templatedir)" || exit $$?; \
+	done
+
+uninstall-dist_java_templateDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(dist_java_template_DATA)'; test -n "$(java_templatedir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(java_templatedir)'; $(am__uninstall_files_from_dir)
+install-dist_python_templateDATA: $(dist_python_template_DATA)
+	@$(NORMAL_INSTALL)
+	@list='$(dist_python_template_DATA)'; test -n "$(python_templatedir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(python_templatedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(python_templatedir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(python_templatedir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(python_templatedir)" || exit $$?; \
+	done
+
+uninstall-dist_python_templateDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(dist_python_template_DATA)'; test -n "$(python_templatedir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(python_templatedir)'; $(am__uninstall_files_from_dir)
+install-dist_txt_templateDATA: $(dist_txt_template_DATA)
+	@$(NORMAL_INSTALL)
+	@list='$(dist_txt_template_DATA)'; test -n "$(txt_templatedir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(txt_templatedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(txt_templatedir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(txt_templatedir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(txt_templatedir)" || exit $$?; \
+	done
+
+uninstall-dist_txt_templateDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(dist_txt_template_DATA)'; test -n "$(txt_templatedir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(txt_templatedir)'; $(am__uninstall_files_from_dir)
 tags: TAGS
 TAGS:
 
@@ -508,9 +566,9 @@ distdir: $(DISTFILES)
 	done
 check-am: all-am
 check: check-am
-all-am: Makefile $(SCRIPTS) $(DATA)
+all-am: Makefile $(DATA)
 installdirs:
-	for dir in "$(DESTDIR)$(bindir)" "$(DESTDIR)$(javadir)"; do \
+	for dir in "$(DESTDIR)$(cpp_templatedir)" "$(DESTDIR)$(html_templatedir)" "$(DESTDIR)$(java_templatedir)" "$(DESTDIR)$(python_templatedir)" "$(DESTDIR)$(txt_templatedir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -543,14 +601,13 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-@TANGO_JAVA_ENABLED_FALSE@distclean-local:
 clean: clean-am
 
 clean-am: clean-generic clean-libtool mostlyclean-am
 
 distclean: distclean-am
 	-rm -f Makefile
-distclean-am: clean-am distclean-generic distclean-local
+distclean-am: clean-am distclean-generic
 
 dvi: dvi-am
 
@@ -564,14 +621,15 @@ info: info-am
 
 info-am:
 
-install-data-am: install-dist_javaDATA
-	@$(NORMAL_INSTALL)
-	$(MAKE) $(AM_MAKEFLAGS) install-data-hook
+install-data-am: install-dist_cpp_templateDATA \
+	install-dist_html_templateDATA install-dist_java_templateDATA \
+	install-dist_python_templateDATA install-dist_txt_templateDATA
+
 install-dvi: install-dvi-am
 
 install-dvi-am:
 
-install-exec-am: install-binSCRIPTS
+install-exec-am:
 
 install-html: install-html-am
 
@@ -609,67 +667,33 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-binSCRIPTS uninstall-dist_javaDATA
+uninstall-am: uninstall-dist_cpp_templateDATA \
+	uninstall-dist_html_templateDATA \
+	uninstall-dist_java_templateDATA \
+	uninstall-dist_python_templateDATA \
+	uninstall-dist_txt_templateDATA
 
-.MAKE: install-am install-data-am install-strip
+.MAKE: install-am install-strip
 
 .PHONY: all all-am check check-am clean clean-generic clean-libtool \
-	distclean distclean-generic distclean-libtool distclean-local \
-	distdir dvi dvi-am html html-am info info-am install \
-	install-am install-binSCRIPTS install-data install-data-am \
-	install-data-hook install-dist_javaDATA install-dvi \
-	install-dvi-am install-exec install-exec-am install-html \
-	install-html-am install-info install-info-am install-man \
-	install-pdf install-pdf-am install-ps install-ps-am \
-	install-strip installcheck installcheck-am installdirs \
-	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	uninstall uninstall-am uninstall-binSCRIPTS \
-	uninstall-dist_javaDATA
+	distclean distclean-generic distclean-libtool distdir dvi \
+	dvi-am html html-am info info-am install install-am \
+	install-data install-data-am install-dist_cpp_templateDATA \
+	install-dist_html_templateDATA install-dist_java_templateDATA \
+	install-dist_python_templateDATA install-dist_txt_templateDATA \
+	install-dvi install-dvi-am install-exec install-exec-am \
+	install-html install-html-am install-info install-info-am \
+	install-man install-pdf install-pdf-am install-ps \
+	install-ps-am install-strip installcheck installcheck-am \
+	installdirs maintainer-clean maintainer-clean-generic \
+	mostlyclean mostlyclean-generic mostlyclean-libtool pdf pdf-am \
+	ps ps-am uninstall uninstall-am \
+	uninstall-dist_cpp_templateDATA \
+	uninstall-dist_html_templateDATA \
+	uninstall-dist_java_templateDATA \
+	uninstall-dist_python_templateDATA \
+	uninstall-dist_txt_templateDATA
 
-
-#astor jive pogo pogo-6 devicetree atkpanel logviewer atktuning jdraw synopticappli atkmoni cvstag TangoVers tg_devtest: Makefile
-@TANGO_JAVA_ENABLED_TRUE@$(bin_SCRIPTS): Makefile
-@TANGO_JAVA_ENABLED_TRUE@	rm -f $@ $@.tmp
-@TANGO_JAVA_ENABLED_TRUE@	srcdir=''; \
-@TANGO_JAVA_ENABLED_TRUE@	test -f ./$@.in || srcdir=$(srcdir)/; \
-@TANGO_JAVA_ENABLED_TRUE@	$(edit) $${srcdir}$@.in >$@.tmp
-
-@TANGO_JAVA_ENABLED_TRUE@	chmod +x $@.tmp
-@TANGO_JAVA_ENABLED_TRUE@	chmod a-w $@.tmp
-@TANGO_JAVA_ENABLED_TRUE@	mv $@.tmp $@
-
-@TANGO_JAVA_ENABLED_TRUE@astor: $(srcdir)/astor.in
-@TANGO_JAVA_ENABLED_TRUE@jive: $(srcdir)/jive.in
-@TANGO_JAVA_ENABLED_TRUE@pogo: $(srcdir)/pogo.in
-@TANGO_JAVA_ENABLED_TRUE@pogo-6: $(srcdir)/pogo-6.in
-@TANGO_JAVA_ENABLED_TRUE@devicetree: $(srcdir)/devicetree.in
-@TANGO_JAVA_ENABLED_TRUE@atkpanel: $(srcdir)/atkpanel.in
-@TANGO_JAVA_ENABLED_TRUE@logviewer: $(srcdir)/logviewer.in
-@TANGO_JAVA_ENABLED_TRUE@atktuning: $(srcdir)/atktuning.in
-@TANGO_JAVA_ENABLED_TRUE@jdraw: $(srcdir)/jdraw.in
-@TANGO_JAVA_ENABLED_TRUE@synopticappli: $(srcdir)/synopticappli.in
-@TANGO_JAVA_ENABLED_TRUE@atkmoni: $(srcdir)/atkmoni.in
-@TANGO_JAVA_ENABLED_TRUE@cvstag: $(srcdir)/cvstag.in
-@TANGO_JAVA_ENABLED_TRUE@TangoVers: $(srcdir)/TangoVers.in
-@TANGO_JAVA_ENABLED_TRUE@tg_devtest: $(srcdir)/tg_devtest.in
-
-@TANGO_JAVA_ENABLED_TRUE@distclean-local: distclean-local-check
-@TANGO_JAVA_ENABLED_TRUE@.PHONY: distclean-local-check
-@TANGO_JAVA_ENABLED_TRUE@distclean-local-check:
-@TANGO_JAVA_ENABLED_TRUE@	-rm -rf $(bin_SCRIPTS)
-
-# Even though we do not want to compile anything in the
-# java-directory, we still want to install the sources in
-# prefix/share/tango
-
-install-data-hook:
-	(cd  $(DESTDIR)$(javadir) ; \
-	for i in $(dist_java_DATA) ; do \
-	link_name=`echo $$i | @SED@ -e's/-[0-9.]*/./'` ; \
-	$(RM) $$link_name && @LN_S@ $$i $$link_name ; \
-	done \
-	)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
