--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: java
 
+before_script: sudo apt-get install -y build-essential omniidl libomniorb4-dev libcos4-dev libomnithread3-dev libzmq3-dev
 script:
   - ant build package
+
+addons:
+  apt:
+    update: true
 
 deploy:
   - provider: releases
